# veppy

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflow/: release-please.yml
.github/workflows/: conventional-prs.yml  release-please.yml
tests/: test_vcf.py  test_vep.py
veppy/: commands.py  utils.py  vcf.py  vep.py
