[tool.poetry]
name = "veppy"
version = "0.1.0"
description = "Utilities for querying VEP-annotated VCF files"
license = "GPL-3.0-or-later"
authors = ["Niklas Mähler <niklas.mahler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.scripts]
veppy = "veppy.commands:main"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
